--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@ body{margin:0;background:#fff;color:var(--text);font-family:"Open Sans",system-u
   <div class="container hero-grid">
     <div class="hero-copy">
       <small>lançamento em breve</small>
-      <h1>Seu telejornal, organizado e no ar</h1>
+      <h1>Seu telejornal no flow com baixo custo</h1>
       <p>O NewsFlow centraliza laudas, espelhos e TP; integra ao OBS/vMix e mantém redação e estúdio no mesmo ritmo — pensado para pequenas TVs e webTVs que precisam de <strong>versatilidade e baixo custo</strong>.</p>
       <div class="pills">
         <a class="btn btn-primary" href="#contato">Solicitar demonstração</a>
