--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@ body{margin:0;background:#fff;color:var(--text);font-family:"Open Sans",system-u
             <span class="ico" aria-hidden="true">
               <svg viewBox="0 0 24 24" fill="none"><path d="M13 2L3 14h7l-1 8 10-12h-7l1-8z" fill="currentColor"/></svg>
             </span>
-            <h3 class="title">⚡ Ganhe velocidade</h3>
+            <h3 class="title">Ganhe velocidade</h3>
           </div>
           <p class="desc">Centralizando tudo em um só lugar.</p>
         </article>
@@ -199,7 +199,7 @@ body{margin:0;background:#fff;color:var(--text);font-family:"Open Sans",system-u
             <span class="ico" aria-hidden="true">
               <svg viewBox="0 0 24 24" fill="none"><circle cx="12" cy="12" r="8" stroke="currentColor" stroke-width="2"/><circle cx="12" cy="12" r="3" fill="currentColor"/><path d="M12 4v4M12 16v4M4 12h4M16 12h4" stroke="currentColor" stroke-width="2"/></svg>
             </span>
-            <h3 class="title">🎯 Mais segurança</h3>
+            <h3 class="title">Mais segurança</h3>
           </div>
           <p class="desc">E menos improviso no estúdio.</p>
         </article>
@@ -221,7 +221,7 @@ body{margin:0;background:#fff;color:var(--text);font-family:"Open Sans",system-u
             <span class="ico" aria-hidden="true">
               <svg viewBox="0 0 24 24" fill="none"><path d="M3 12c3-4 6-4 9 0s6 4 9 0" stroke="currentColor" stroke-width="2" stroke-linecap="round"/></svg>
             </span>
-            <h3 class="title">📡 Menos stress</h3>
+            <h3 class="title">Menos stress</h3>
           </div>
           <p class="desc">No ritmo do ao vivo, com previsibilidade.</p>
         </article>
